Remove entity and typekey from AlwaysAvailableTypes