@@ -23,7 +23,6 @@ import de.friday.sonarqube.gosu.plugin.rules.BaseGosuRule;
 import org.antlr.v4.runtime.ParserRuleContext;
 import org.antlr.v4.runtime.tree.ParseTree;
 import org.sonar.check.Rule;
-import org.sonar.check.RuleProperty;
 
 import java.util.Arrays;
 import java.util.HashSet;
@@ -31,24 +30,14 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Rule(key = UnnecessaryImportRule.KEY)
 public class UnnecessaryImportRule extends BaseGosuRule {
 
     static final String KEY = "UnnecessaryImportRule";
 
-    private static final String DEFAULT_EXPLICIT_NAMESPACES = "";
-
     private final Set<UsesStatement> allImports = new HashSet<>();
     private final Set<String> allReferencedClasses = new HashSet<>();
-    @RuleProperty(
-            key = "AllowedExplicitImportNamespaces",
-            description = "Comma-separated list of explicit import namespaces allowed.",
-            defaultValue = DEFAULT_EXPLICIT_NAMESPACES
-    )
-    private String defaultExplicitNamespaces = DEFAULT_EXPLICIT_NAMESPACES;
 
     private String currentPackage;
     private boolean afterUsesStatements = false;
@@ -78,7 +67,7 @@ public class UnnecessaryImportRule extends BaseGosuRule {
                 .map(ParseTree::getPayload)
                 .filter(ParserRuleContext.class::isInstance)
                 .map(parserRuleContext -> ((ParserRuleContext) parserRuleContext).getText())
-                .collect(Collectors.toList());
+                .toList();
         allReferencedClasses.addAll(staticImportClasses);
     }
 
@@ -122,28 +111,18 @@ public class UnnecessaryImportRule extends BaseGosuRule {
         return !usesStatement.isWildcardImport();
     }
 
-    private Stream<String> explicitNamespaces() {
-        return Arrays.stream(
-                        defaultExplicitNamespaces.split(","))
-                .filter(s -> !s.isEmpty());
-    }
-
     private void checkUnnecessaryImports(UsesStatement usesStatement) {
         checkSamePackageImport(usesStatement);
         checkDuplicateImport(usesStatement);
-
 
         AlwaysAvailableTypes.forEach(
                 alwaysAvailableType -> checkUsageOfClassesAlwaysAvailable(alwaysAvailableType, usesStatement));
     }
 
     private void checkUsageOfClassesAlwaysAvailable(AlwaysAvailableTypes alwaysAvailableType, UsesStatement usesStatement) {
-        if (usesStatement.startsWith(alwaysAvailableType.packagePrefix)
-                && explicitNamespaces().noneMatch(usesStatement::startsWith)) {
-            addIssueWithMessage(
-                    "Unnecessary import, " + alwaysAvailableType.description + " are always available.",
-                    usesStatement.getContext()
-            );
+        if (usesStatement.startsWith(alwaysAvailableType.packagePrefix)) {
+            addIssueWithMessage("Unnecessary import, " + alwaysAvailableType.description + " are always available.",
+                    usesStatement.getContext());
         }
     }
 
@@ -179,9 +158,7 @@ public class UnnecessaryImportRule extends BaseGosuRule {
      * Types that are always available and do not require import statements.
      */
     private enum AlwaysAvailableTypes {
-        JAVA_LANG("java.lang.", "Java Classes"),
-        GUIDEWIRE_ENTITIES("entity.", "Entity Classes"),
-        GUIDEWIRE_TYPE_KEYS("typekey.", "Typekey Classes");
+        JAVA_LANG("java.lang.", "Java Classes");
 
         private final String packagePrefix;
         private final String description;
